--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,11 @@
 version: '3.4'
 
 services:
-  users-db:
-    container_name: users-db
-    build: ./project/db
-    ports:
-      - 5435:5432 # HOST:CONTAINER
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
 
-  users-service:
-    container_name: users-service
-    build: .
+  users:
+    container_name: users
+    build: 
+      context: https://github.com/dmmeteo/flask-microservices-users.git
     volumes:
       - .:/usr/src/app
     ports:
@@ -25,6 +18,30 @@ services:
       - users-db
     links:
       - users-db
+    # TODO entrypoint.sh file in users-service to normal run service
+
+  users-db:
+    container_name: users-db
+    build: 
+      context: https://github.com/dmmeteo/flask-microservices-users.git#master:project/db
+    ports:
+      - 5435:5432 # HOST:CONTAINER
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+
+  nginx:
+    container_name: nginx
+    build: ./nginx/
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - users
+
+
+
+
 
 
 
