--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - docker-compose up --build -d
 
 script:
-  - docker-compose run users-service python manage.py test
+  - docker-compose run users python manage.py test
 
 after_script:
   - docker-compose down
