--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,11 +2,29 @@ version: '3.4'
 
 services:
 
+  web-service:
+    container_name: web-service
+    build:
+      # context: https://github.com/dmmeteo/flask-microservices-client.git
+      context: ../flask-microservices-client
+      dockerfile: Dockerfile-dev
+    volumes:
+      - ../flask-microservices-client
+    ports:
+      - 9000:9000
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    depends_on:
+      - users
+    links:
+      - users
+
   users:
     container_name: users
     build: 
-      context: https://github.com/dmmeteo/flask-microservices-users.git
-      # context: ../flask-microservices-users
+      # context: https://github.com/dmmeteo/flask-microservices-users.git
+      context: ../flask-microservices-users
     volumes:
         - ../flask-microservices-users:/usr/src/app
     ports:
@@ -23,8 +41,8 @@ services:
   users-db:
     container_name: users-db
     build: 
-      context: https://github.com/dmmeteo/flask-microservices-users.git#master:project/db
-      # context: ../flask-microservices-users/project/db
+      # context: https://github.com/dmmeteo/flask-microservices-users.git#master:project/db
+      context: ../flask-microservices-users/project/db
     ports:
       - 5435:5432 # HOST:CONTAINER
     environment:
