--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ before_install:
   - export REACT_APP_USERS_SERVICE_URL=http:\\localhost
 
 before_script:
-  - docker-compose up --build -d
+  - docker-compose -f docker-compose-stage.yml up --build -d
 
 script:
-  - docker-compose run users python manage.py test
+  - docker-compose -f docker-compose-stage.yml run users python manage.py test
 
 after_script:
-  - docker-compose down
+  - docker-compose -f docker-compose-stage.yml down
