--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,8 +5,9 @@ services:
   web-service:
     container_name: web-service
     build:
-      # context: https://github.com/dmmeteo/flask-microservices-client.git
       context: ../flask-microservices-client
+    volumes:
+      - ../flask-microservices-client:/usr/src/app
     ports:
       - 9000:9000
     environment:
@@ -20,12 +21,12 @@ services:
   users:
     container_name: users
     build: 
-      # context: https://github.com/dmmeteo/flask-microservices-users.git
       context: ../flask-microservices-users
+      dockerfile: Dockerfile-dev
     volumes:
         - ../flask-microservices-users:/usr/src/app
     ports:
-      - 5001:5000 # HOST:CONTAINER
+      - 5001:5000
     environment:
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_dev
@@ -38,10 +39,10 @@ services:
   users-db:
     container_name: users-db
     build: 
-      # context: https://github.com/dmmeteo/flask-microservices-users.git#master:project/db
       context: ../flask-microservices-users/project/db
+      dockerfile: Dockerfile
     ports:
-      - 5435:5432 # HOST:CONTAINER
+      - 5435:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
