--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -6,7 +6,6 @@ services:
     container_name: web-service
     build:
       context: https://github.com/dmmeteo/flask-microservices-client.git
-      # context: ../flask-microservices-client
     ports:
       - 9000:9000
     environment:
@@ -21,9 +20,9 @@ services:
     container_name: users
     build: 
       context: https://github.com/dmmeteo/flask-microservices-users.git
-      # context: ../flask-microservices-users
+      dockerfile: Dockerfile-stage
     ports:
-      - 5001:5000 # HOST:CONTAINER
+      - 5001:5000
     environment:
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_dev
@@ -37,9 +36,8 @@ services:
     container_name: users-db
     build: 
       context: https://github.com/dmmeteo/flask-microservices-users.git#master:project/db
-      # context: ../flask-microservices-users/project/db
     ports:
-      - 5435:5432 # HOST:CONTAINER
+      - 5435:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
