--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,12 +2,12 @@ version: '3.4'
 
 services:
 
-  web-service:
-    container_name: web-service
+  client:
+    container_name: client
     build:
       context: https://github.com/dmmeteo/flask-microservices-client.git
     ports:
-      - 9000:9000
+      - 80
     environment:
       - NODE_ENV=development
       - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
@@ -22,11 +22,11 @@ services:
       context: https://github.com/dmmeteo/flask-microservices-users.git
       dockerfile: Dockerfile-prod
     ports:
-      - 5001:5000
+      - 5000
     environment:
       - APP_SETTINGS=project.config.ProductionConfig
-      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod
-      - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
+      - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_prod
+      - DATABASE_TEST_URL=postgresql://postgres:postgres@users-db:5432/users_test
     depends_on:
       - users-db
     links:
@@ -37,7 +37,7 @@ services:
     build: 
       context: https://github.com/dmmeteo/flask-microservices-users.git#master:project/db
     ports:
-      - 5435:5432
+      - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
