--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -29,6 +29,7 @@ services:
     ports:
       - 5001:5000
     environment:
+      - SECRET_KEY=wakawakapizdawaka
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_dev
       - DATABASE_TEST_URL=postgresql://postgres:postgres@users-db:5432/users_test
