--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - docker-compose -f docker-compose-stage.yml up --build -d
 
 script:
-  - docker-compose -f docker-compose-stage.yml run users python manage.py test
+  - sh test.sh
 
 after_script:
   - docker-compose -f docker-compose-stage.yml down
