--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_install:
 before_script:
   - export TEST_URL=http://localhost
   - export REACT_APP_USERS_SERVICE_URL=http://localhost
+  - export SECRET_KEY=my_precious
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
@@ -37,7 +38,8 @@ before_script:
 
 script:
   - docker-compose -f docker-compose-stage.yml run users python manage.py test
-  - testcafe chrome e2e/index.test.js
+  - docker-compose -f docker-compose-staging.yml run users-service python manage.py recreate_db
+  - testcafe chrome e2e
   # - sh test.sh
 
 after_script:
