--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - 5001:5000
     environment:
-      - SECRET_KEY=wakawakapizdawaka
+      - SECRET_KEY=${SECRET_KEY}
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_dev
       - DATABASE_TEST_URL=postgresql://postgres:postgres@users-db:5432/users_test
@@ -61,7 +61,16 @@ services:
       - users
       - client
 
-
+  swagger:
+    container_name: swagger
+    build:
+      context: ../flask-microservices-swagger
+    ports:
+      - 8080:8080
+    environment:
+      - API_URL=https://raw.githubusercontent.com/dmmeteo/flask-microservices-swagger/master/swagger.json
+    depends_on:
+      - users
 
 
 
