--- a/.travis.yml
+++ b/.travis.yml
@@ -28,17 +28,18 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 before_script:
+  - export COMPOSE_FILE=docker-compose-stage.yml
   - export TEST_URL=http://localhost
   - export REACT_APP_USERS_SERVICE_URL=http://localhost
   - export SECRET_KEY=my_precious
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
-  - docker-compose -f docker-compose-stage.yml up --build -d
+  - docker-compose up --build -d
 
 script:
-  - docker-compose -f docker-compose-stage.yml run users python manage.py test
-  - docker-compose -f docker-compose-stage.yml run users python manage.py recreate_db
+  - docker-compose run users python manage.py test
+  - docker-compose run users python manage.py recreate_db
   - testcafe chrome e2e
   # - sh test.sh
 
