--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -29,6 +29,8 @@ services:
     ports:
       - 5001:5000
     environment:
+      - FLASK_APP=project/__init__.py
+      - FLASK_DEBUG=1
       - SECRET_KEY=${SECRET_KEY}
       - APP_SETTINGS=project.config.DevelopmentConfig
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_dev
