--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -25,6 +25,8 @@ services:
     ports:
       - 5000
     environment:
+      - FLASK_APP=project/__init__.py
+      - FLASK_DEBUG=1
       - SECRET_KEY=${SECRET_KEY}
       - APP_SETTINGS=project.config.StagingConfig
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_stage
