--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -14,8 +14,6 @@ services:
       - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
     depends_on:
       - users
-    links:
-      - users
 
   users:
     container_name: users
@@ -32,8 +30,6 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users_stage
       - DATABASE_TEST_URL=postgresql://postgres:postgres@users-db:5432/users_test
     depends_on:
-      - users-db
-    links:
       - users-db
 
   users-db:
@@ -55,9 +51,6 @@ services:
     ports:
       - 80:80
     depends_on:
-      - users
-      - client
-    links:
       - users
       - client
 
@@ -82,14 +75,13 @@ services:
     ports:
       - 5002:5000
     environment:
+      - FLASK_APP=project/__init__.py
+      - FLASK_DEBUG=1
       - APP_SETTINGS=project.config.DevelopmentConfig
       - USERS_SECRET_URL=http://users:5000
       - DATABASE_URL=postgresql://postgres:postgres@eval-db:5432/eval_dev
       - DATABASE_TEST_URL=postgresql://postgres:postgres@eval-db:5432/eval_test
     depends_on:
-      - users
-      - eval-db
-    links:
       - users
       - eval-db
 
