--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,7 @@ server {
 
     location / {
         proxy_pass        http://client:3000;
+        proxy_redirect    default;
         proxy_http_version 1.1;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
@@ -15,6 +16,7 @@ server {
 
     location /users {
         proxy_pass        http://users:5000;
+        proxy_redirect    default;
         proxy_http_version 1.1;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
@@ -26,6 +28,7 @@ server {
 
     location /ping {
         proxy_pass        http://users:5000;
+        proxy_redirect    default;
         proxy_http_version 1.1;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
@@ -37,6 +40,7 @@ server {
 
     location /auth {
         proxy_pass        http://users:5000;
+        proxy_redirect    default;
         proxy_http_version 1.1;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
@@ -45,6 +49,5 @@ server {
         proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header  X-Forwarded-Host $server_name;
     }
-
 
 }
